--- a/src/robotics/WER2025.md
+++ b/src/robotics/WER2025.md
@@ -6,3 +6,12 @@ hide:
 ---
 # World Educational Robotics 2025
 ![An image of my robot](images/WER2025.png)
+*Me testing my robot on one of the tasks*
+## Overview
+[WER](http://wergame.org/){target="_blank" rel="noopener"} is an international robotics competition that takes place in Britain every July and the winners fo that competition qualify for the world championships in December in Shanghai. It is a large event, with over 6000 contestants in the championships. I joined in late December last year, and I went to the competition in England. I came 4th in my age category, but the top 3 all came from China to compete, so I qualified as the top British contestant and am going to the world championships!
+## About the competition
+Each year, the competition has a different theme and map. This year was autonomous driving, and had tasks relating to the theme, e.g. Replacing the batteries in a model electric car and picking up containers to transport. You must compete in teams of 1 - 3. You get given a basic robot (plastic plate, 2 motors with wheels, 5 line sensors and a controller) and must build additional things to complete the required tasks. It uses Abilix robots which have a meccano-style construction. You must also program the robot using either a version of Scratch or Python to move around the map and complete the required tasks.
+## My Progress
+The first things I did when I started were build the basic robot, just so I knew how it fit together, then I tried to get it to move. I quite quickly (due to my previous programming experience) worked out how to do things and moved onto trying to do it in C (this was with old robots that only took binaries). Over a few hours of programming at home, I got the robot to reliably move to all of the positions and return. Over the next few weeks, I began to engineer solutions to some of the tasks, and I eventually got them working. I then learnt that in the actual competition, you only have *3 minutes* to complete all of the tasks, so speed is very important. I decided to mount all of my solutions on separate plates that I can switch between in seconds. Then I went to the competition, found the 2 new tasks that we don't know about until we get there, and managed to complete 1 of them! Since then, I have solved the 4th task model (changing batteries in a model car) and have massively sped up the robot.
+## My Code
+I have approximately 300 lines of Python code, which I can't post yet as other contestants may be able to take it and use some of it, but I will upload it shortly after the world championships.
