--- a/src/robotics/WER2025.md
+++ b/src/robotics/WER2025.md
@@ -5,10 +5,11 @@ hide:
  - toc
 ---
 # World Educational Robotics 2025
+*2025*
 ![An image of my robot](images/WER2025.png)
 *Me testing my robot on one of the tasks*
 ## Overview
-[WER](http://wergame.org/){target="_blank" rel="noopener"} is an international robotics competition that takes place in Britain every July and the winners fo that competition qualify for the world championships in December in Shanghai. It is a large event, with over 6000 contestants in the championships. I joined in late December last year, and I went to the competition in England. I came 4th in my age category, but the top 3 all came from China to compete, so I qualified as the top British contestant and am going to the world championships!
+[WER](http://wergame.org/){target="_blank" rel="noopener"} is an international educational robotics curriculum. There are many countries that host WER extra-curricular clubs with millions of participants, and some countries host robotics competitions. The most regular competitions take place in Britain every July and the winners from that competition qualify for the world championships in December in Shanghai. It is a large event, with over 6000 contestants in the championships. I joined in late December last year, and I went to the competition in England. I came 4th in my age category, but the top 3 all came from China to compete, so I qualified as the top British contestant and am going to the world championships!
 ## About the competition
 Each year, the competition has a different theme and map. This year was autonomous driving, and had pre-set tasks relating to the theme, e.g. Replacing the batteries in a model electric car and picking up containers to transport. You must compete in teams of 1 - 3. You get given a basic robot (plastic plate, 2 motors with wheels, 5 line sensors and a controller) and must build additional things to complete the required tasks. It uses Abilix robots which have a meccano-style construction. You must also program the robot using either a version of Scratch or Python to move around the map and complete the required tasks.
 <!--## My Progress
