--- a/src/robotics/WER2025.md
+++ b/src/robotics/WER2025.md
@@ -5,7 +5,7 @@ hide:
  - toc
 ---
 # World Educational Robotics 2025
-*2025*
+*2025 - Aged 14*
 ![An image of my robot](images/WER2025.png)
 *Me testing my robot on one of the tasks*
 ## Overview
