--- a/src/robotics/WER2025.md
+++ b/src/robotics/WER2025.md
@@ -1,8 +1,15 @@
 ---
 title: WER 2025
-hide:
- - navigation
- - toc
+summary: An international robotics competition
+year: 2025
+tags:
+    - Robotics
+    - Electronics
+    - Programming
+    - Python
+    - Engineering
+    - C++
+    - Logic
 ---
 # World Educational Robotics 2025
 *2025 - Aged 14*
