Did a load of stuff

--- a/TODO
+++ b/TODO
@@ -1,12 +1,9 @@
 Add daylight photo to index.md
-Resize and retake project photos to be same size
-Migrate CPU page to CPU folder
+Resize and retake laptop & safe photos to be same size
 Add CPU schematic
-Add reasons for including safe, camjam, morse code and wildlife camera
+Add reasons for including camjam, morse code and wildlife camera
 Restructure WER
 Add more ?systems? section on index
-Sudoku solver better image
-A bit about cyber switchup deadline
+A bit about cyber switchup deadline?
 More photos in general (e.g. CPU breadboard wires)
-Change sudoku solver image
 Add magic mirror, wildlife camera, morse code, scripted journeys, sudoku solver, camjam and picar pages
