--- a/TODO
+++ b/TODO
@@ -1,8 +1,7 @@
 Add daylight photo to index.md
 Add CPU schematic
 Add reasons for including camjam, morse code and wildlife camera
-Restructure WER
+Restructure WER?
 Add more ?systems? section on index
-A bit about cyber switchup deadline?
 More photos in general (e.g. CPU breadboard wires)
 Add magic mirror, wildlife camera, morse code, scripted journeys, sudoku solver, camjam and picar pages
