Added code to WER

--- a/src/robotics/WER2025.md
+++ b/src/robotics/WER2025.md
@@ -61,5 +61,332 @@ Shortly after we arrived at the venue, we saw the 3 new tasks:
 * You had to lift a small plastic box up and place it on a higher platform.
 
 In the opening ceremony, I had to read out the competitors oath (essentially saying that we won't cheat) in English. However, while I was waiting to go up on the stage, most other teams started writing code, testing and debugging early, so I lost about 40 minutes of preparation time compared to the other teams. I then managed to test everything, but I realised that I had built my solution to task 4 the wrong way round! My code to go to the parking space also stopped working. In the end, I managed to get 350 points in the morning, which was the highest of the entire British division. In the afternoon, I managed to do a bit more. I solved the first of the additional tasks, and got the red block to the parking space (although neither of my wheels were actually in the box). I think I got 440 points. It was then the awards and closing ceremony. I came 3rd! I was aiming for top 50, so I was shocked when they read my name out!
+## My Code
+I have around 360 lines of Python code, organised into 5 sections. The first section is the main function. This is what I change the most often. After that, I have the code to complete each task once in position. Next, I have utility functions, such as calibrating the sensors and leaving the start box. Section 4 contains the functions to take me to each position. Many of these have small speed optimizations, such as skipping lines instead of going round the longer way. Finally, I have the code to take the robot back to the start box from each position. You can see the code here:
+<details>
+<summary style="cursor: pointer">Show/Hide Code</summary>
+```python
+# IMPORTS
+import robot
+
+# MAIN
+def main():
+    start()
+    park()
+
+
+# UTILITY
+def start():
+    robot.WER_InitRobot(1,-1,2,1,1)
+    robot.WER_SetMotor_T(30,30,1)
+def setup():
+    robot.WER_InitRobot(1,-1,2,1,1)
+    robot.WER_Set_GrayscaleSensor()
+def sideways():
+    robot.WER_SetMotor_T(-30,-30,1)
+    robot.WER_SetMotor_E(30,-30, 2, 2200)
+    robot.WER_SetMotor_T(30,30,2)
+    robot.WER_SetMotor_E(-30,30, 1, 2200)
+    robot.WER_SetMotor_T(30,30,2.1)
+    robot.WER_SetMotor_E(-30,30, 1, 2200)
+    robot.WER_SetMotor_T(30,30,2.3)
+def park():
+    robot.WER_SetMotor_T(30, -30, 0.5)
+    robot. WER_SetMotor_T(100, 100, 2.7)
+
+# TASKS
+def t1():
+    robot.set_motor(3, -30)
+    robot.sleep(1.2)
+    robot.set_motor(3, 0)
+def t2():
+    robot.set_motor(3, 30)
+    robot.sleep(1)
+    robot.set_motor(3,10)
+    robot.WER_SetMotor_T(-30, -30, 0.5)
+    robot.set_motor(3, 0)
+    robot.WER_SetMotor_T(-10, -10, 0.3)
+def t3():
+    robot.set_motor(3, 60)
+    robot.sleep(1.5)
+    robot.set_motor(3, 0)
+def t4a():
+    robot.set_motor(3, 10)
+    while robot.get_encoder(3) < 1100:
+        pass
+    robot.set_motor(3,0)
+    robot.set_motor(4,-30)
+    robot.sleep(1)
+    robot.set_motor(4,0)
+def t4b():
+    robot.set_motor(3,-10)
+    while robot.get_encoder(3) > -1100:
+        pass
+    robot.set_motor(3,0)
+def t5():
+    robot.set_motor(3,20)
+    robot.sleep(1)
+    robot.set_motor(3,0)
+def t6():
+    pass
+def t7():
+    pass
+
+# POSITIONS
+def p1(task=None):
+    robot.WER_LineWay_C(40,5,0.3)
+    robot.WER_Around(30,-30,0)
+    robot.WER_LineWay_C(40,15,0.3)
+    robot.WER_Around(-30,30,0)
+    robot.WER_LineWay_C(40,1,0.3)
+    robot.WER_Around(-30, 30,0)
+    robot.WER_LineWay_C(40,5,0.3)
+    robot.WER_Around(30, -30, 0)
+    robot.WER_AdvancedWay_T(30,3)
+    if task != None:
+        task()
+        r1()
+def p2(task=None):
+    robot.WER_LineWay_C(60,5,0.2)
+    robot.WER_Around(50,-50,0)
+    robot.WER_LineWay_C(60,15,0.2)
+    robot.WER_Around(-50,50,0)
+    robot.WER_LineWay_C(60,1,0.3)
+    robot.WER_AdvancedWay_T(30,1.2)
+    if task != None:
+        task()
+        r2()
+def p3(task=None):
+    robot.WER_LineWay_C(60,5,0.3)
+    robot.WER_Around(60, -60,0)
+    for _ in range(8):
+        robot.WER_AdvancedWay_T(60,0.1)
+    while robot.get_channel_gray(1,5) < 2000:
+        robot.WER_SetMotor_K(40,40)
+    robot.sleep(0.4)
+    robot.WER_SetMotor_K(0,0)
+    robot.WER_Around(-60, 60,0)
+    robot.WER_LineWay_C(60,1,0.1)
+    robot.WER_Around(-60,60,1)
+    while(robot.get_channel_gray(1, 5) < 2000):
+        robot.WER_SetMotor_K(-60,-60)
+    robot.sleep(0.3)
+    robot.WER_SetMotor_K(0,0)
+    while(robot.get_channel_gray(1, 5) < 2000):
+        robot.WER_SetMotor_K(-60,-60)
+    robot.WER_SetMotor_K(0,0)
+    robot.WER_SetMotor_T(60, 60, 0.2)
+    robot.WER_Around(60, -60, 0)
+    robot.WER_AdvancedWay_T(30,2)
+    if task != None:
+        task()
+        r3()
+def p4(task=None):
+    robot.WER_LineWay_C(40,5,0.3)
+    robot.WER_Around(30,-30,0)
+    robot.WER_LineWay_C(40,15,0.3)
+    robot.WER_Around(-30,30,0)
+    robot.WER_LineWay_C(40,1,0.3)
+    while(robot.get_channel_gray(1, 5) < 1000):
+        robot.WER_SetMotor_K(-35,35)
+    robot.WER_SetMotor_K(0,0)
+    while(robot.get_channel_gray(1, 3) < 1000):
+        robot.WER_SetMotor_K(-35,35)
+    robot.WER_SetMotor_K(0,0)
+    while(robot.get_channel_gray(1, 5) < 1000):
+        robot.WER_SetMotor_K(-35,-35)
+    robot.sleep(0.3)
+    robot.WER_SetMotor_K(0,0)
+    while(robot.get_channel_gray(1, 5) < 1000):
+        robot.WER_SetMotor_K(-35,-35)
+    robot.sleep(0.3)
+    robot.WER_SetMotor_K(0,0)
+    while(robot.get_channel_gray(1, 5) < 1000):
+        robot.WER_SetMotor_K(-35,-37)
+    robot.WER_SetMotor_K(0,0)
+    robot.WER_SetMotor_T(40, 40, 0.3)
+    robot.WER_Around(30, -30, 0)
+    robot.WER_AdvancedWay_T(30,1.7)
+    if task != None:
+        task()
+        r4()
+def p5(task=None):
+    robot.WER_LineWay_C(40,5,0.3)
+    robot.WER_Around(30,-30,0)
+    robot.WER_LineWay_C(40,15,0.3)
+    robot.WER_SetMotor_T(40, 40, 0.3)
+    while(robot.get_channel_gray(1, 5) < 2000):
+        robot.WER_SetMotor_K(60,60)
+    robot.sleep(0.3)
+    robot.WER_SetMotor_K(0,0)
+    robot.WER_Around(-30, 30, 0)
+    robot.WER_LineWay_C(40,5,0.3)
+    robot.WER_Around(30,-30,0)
+    robot.WER_AdvancedWay_T(30, 2.2)
+    
+    if task != None:
+        task()
+        r5()
+def p6(task=None):
+    robot.WER_LineWay_C(60,5,0.2)
+    robot.WER_Around(30,-30,0)
+    robot.WER_LineWay_C(60,15,0.2)
+    robot.WER_Around(30, -30,0)
+    robot.WER_LineWay_C(60,1,0.05)
+    robot.WER_Around(-30, 30, 0)
+    robot.WER_LineWay_C(60,5,0.2)
+    robot.WER_SetMotor_T(30,30,0.2)
+    robot.WER_LineWay_C(60,5,0.3)
+    robot.WER_SetMotor_T(30,30,2.2)
+    if task != None:
+        task()
+        r6()
+def p7(task=None):
+    robot.WER_LineWay_C(40,5,0.3)
+    robot.WER_Around(30,-30,0)
+    robot.WER_LineWay_C(40,15,0.3)
+    robot.WER_SetMotor_T(40, 40, 0.3)
+    while(robot.get_channel_gray(1, 5) < 2000):
+        robot.WER_SetMotor_K(60,60)
+    robot.sleep(0.3)
+    robot.WER_SetMotor_K(0,0)
+    while robot.get_channel_gray(1,3) < 3000:
+        robot.WER_SetMotor_K(40,-40)
+    robot.WER_AdvancedWay_T(40,1.8)
+    if task != None:
+        task()
+        r7()
+def p8(task=None):
+    robot.WER_LineWay_C(60,5,0.2)
+    robot.WER_Around(50,-50,0)
+    robot.WER_LineWay_C(60,15,0.2)
+    x = robot.get_encoder(1)
+    print(x)
+    while robot.get_encoder(1) > x-5200:
+        robot.WER_SetMotor_K(60,60)
+        print(robot.get_encoder(1))
+    robot.WER_SetMotor_K(0,0)
+    robot.WER_Around(60,0,0)
+    robot.WER_Around(60,0,0)
+    robot.WER_AdvancedWay_T(30, 1.2)
+    
+    if task != None:
+        task()
+        r8()
+def p9(task=None):
+    robot.WER_LineWay_C(40,5,0.3)
+    robot.WER_Around(30,-30,0)
+    robot.WER_LineWay_C(40,15,0.3)
+    robot.WER_Around(30, -30,0)
+    robot.WER_LineWay_C(30,1,0.3)
+    robot.WER_AdvancedWay_T(20, 1.8)
+    if task != None:
+        task()
+        r9()
+def p10(task=None):
+    robot.WER_LineWay_C(40,5,0.3)
+    robot.WER_Around(30,-30,0)
+    robot.WER_LineWay_C(40,15,0.3)
+    robot.WER_Around(-30,30,0)
+    robot.WER_LineWay_C(40,1,0.3)
+    robot.WER_Around(-30, 30, 0)
+    robot.WER_LineWay_C(40, 5, 0.3)
+    robot.WER_AdvancedWay_T(30,1.2)
+    if task != None:
+        task()
+        r10()
+
+# RETURNS
+def r1():
+    robot.WER_SetMotor_T(-50, -60, 2.2)
+def r2():
+    while(robot.get_channel_gray(1, 1) < 2000):
+        robot.WER_SetMotor_K(-60,-60)
+    robot.sleep(0.2)
+    while(robot.get_channel_gray(1, 1) < 2000):
+        robot.WER_SetMotor_K(-60,-60)
+    robot.WER_SetMotor_K(60, 60)
+    robot.sleep(0.2)
+    robot.WER_SetMotor_K(0,0)
+    robot.WER_Around(-60, 60, 0)
+    robot.WER_LineWay_C(60, 1, 0.2)
+    robot.WER_Around(-60, 60, 0)
+    robot.WER_LineWay_C(60, 15, 0.3)
+def r3():
+    while robot.get_channel_gray(1, 5) < 2000:
+        robot.WER_SetMotor_K(-60, -60)
+    robot.WER_SetMotor_T(-60, -60, 0.3)
+    while robot.get_channel_gray(1, 5) < 2000:
+        robot.WER_SetMotor_K(-60, -60)
+    robot.WER_SetMotor_T(60,60,0.3)
+    robot.WER_Around(-60, 60, 0)
+    robot.WER_LineWay_C(60,15,0)
+    robot.WER_SetMotor_T(60, 60, 0.3)
+    while robot.get_channel_gray(1, 1) < 2000:
+        robot.WER_SetMotor_K(60, 60)
+    robot.WER_SetMotor_K(0,0)
+    robot.WER_SetMotor_T(-60, 60, 0.4)
+    robot.WER_SetMotor_T(60, 60, 0.3)
+def r4():
+    while robot.get_channel_gray(1, 1) < 2000:
+        robot.WER_SetMotor_K(-30, -30)
+    robot.WER_SetMotor_T(-30, -30, 0.3)
+    while robot.get_channel_gray(1, 5) < 2000:
+        robot.WER_SetMotor_K(-30, -30)
+    robot.WER_SetMotor_T(30,30,0.3)
+    robot.WER_Around(-30, 30, 0)
+    robot.WER_LineWay_C(40,15,0)
+    robot.WER_SetMotor_T(30, 30, 0.3)
+    while robot.get_channel_gray(1, 1) < 2000:
+        robot.WER_SetMotor_K(30, 30)
+    robot.WER_SetMotor_K(0,0)
+    robot.WER_SetMotor_T(-30, 30, 0.5)
+    robot.WER_SetMotor_T(30, 30, 0.3)
+def r5():
+    robot.WER_SetMotor_T(-54,-50,5.5)
+def r6():
+    while robot.get_channel_gray(1,1) < 2000:
+        robot.WER_SetMotor_K(-50,-50)
+    while robot.get_channel_gray(1,1) >= 2000:
+        robot.WER_SetMotor_K(-50,50)
+    while robot.get_channel_gray(1,1) < 2000:
+        robot.WER_SetMotor_K(-50,50)
+    while robot.get_channel_gray(1,3) < 2000:
+        robot.WER_SetMotor_K(-50,50)
+    robot.WER_LineWay_C(60,15,0.3)
+    while robot.get_channel_gray(1,1) < 2000:
+        robot.WER_SetMotor_K(60,60)
+    robot.sleep(0.2)
+    robot.WER_SetMotor_T(-50,50,0.5)
+    robot.WER_SetMotor_T(50,50,0.3)
+def r7():
+    while robot.get_channel_gray(1,1) < 2000:
+        robot.WER_SetMotor_K(-40, -40)
+    robot.WER_SetMotor_T(40,40,0.3)
+    robot.WER_Around(40,-40,0)
+    robot.WER_LineWay_C(50, 15,0.3)
+    while robot.get_channel_gray(1,3) < 2000:
+        robot.WER_SetMotor_K(40,40)
+    robot.sleep(0.3)
+    robot.WER_SetMotor_K(0,0)
+    robot.WER_Around(-30,30,0)
+    robot.WER_SetMotor_T(30,30,0.5)
+def r8():
+    robot.WER_SetMotor_T(-90,-60,4)
+def r9():
+    while robot.get_channel_gray(1, 1) < 2000:
+        robot.WER_SetMotor_K(-30, -30)
+    robot.WER_SetMotor_T(30, -30, 0.5)
+    robot.WER_SetMotor_T(30, 28, 3)
+def r10():
+    while robot.get_channel_gray(1,5) < 2000:
+        robot.WER_SetMotor_K(-30, -30)
+    robot.WER_SetMotor_T(-30, 30, 0.3)
+    robot.WER_SetMotor_T(30, 30, 3)
+
+# START
+main()#program entry
+```
+</details>
 ## Challenges
 Doing this had a lot of challenges, from my first sessions building the robot, starting to program it, learning how to use C++ with the robot, etc. One of the biggest (unexpected) challenges was when they completely changed the syntax of the function calls *3 weeks* before the competition! I had to spend a lot of time at home converting my 300 lines of code. Shortly after the competition, they changed from the old C202 robots to the new SK201 robots. This meant that I had to change all of my code from C++ to Python. However, the functions were very similar so it didn't take too long. The most challenging task model was task 4, because the dead battery was too low for a motor to reach, so I had to use a crank linkage with a claw on the end to move it. Also, you had to put the battery back in the low position so the claw had to be able to grab and release.
