--- a/TODO
+++ b/TODO
@@ -5,3 +5,4 @@ Restructure WER?
 Add more ?systems? section on index
 More photos in general (e.g. CPU breadboard wires)
 Add magic mirror, wildlife camera, morse code, scripted journeys, sudoku solver, camjam and picar pages
+Add 2nd WER task
