--- a/src/robotics/WER2025.md
+++ b/src/robotics/WER2025.md
@@ -62,7 +62,7 @@ Shortly after we arrived at the venue, we saw the 3 new tasks:
 
 In the opening ceremony, I had to read out the competitors oath (essentially saying that we won't cheat) in English. However, while I was waiting to go up on the stage, most other teams started writing code, testing and debugging early, so I lost about 40 minutes of preparation time compared to the other teams. I then managed to test everything, but I realised that I had built my solution to task 4 the wrong way round! My code to go to the parking space also stopped working. In the end, I managed to get 350 points in the morning, which was the highest of the entire British division. In the afternoon, I managed to do a bit more. I solved the first of the additional tasks, and got the red block to the parking space (although neither of my wheels were actually in the box). I think I got 440 points. It was then the awards and closing ceremony. I came 3rd! I was aiming for top 50, so I was shocked when they read my name out!
 ## My Code
-I have around 360 lines of Python code, organised into 5 sections. The first section is the main function. This is what I change the most often. After that, I have the code to complete each task once in position. Next, I have utility functions, such as calibrating the sensors and leaving the start box. Section 4 contains the functions to take me to each position. Many of these have small speed optimizations, such as skipping lines instead of going round the longer way. Finally, I have the code to take the robot back to the start box from each position. You can see the code here:
+I have around 320 lines of Python code, organised into 5 sections. The first section is the main function. This is what I change the most often. After that, I have the code to complete each task once in position. Next, I have utility functions, such as calibrating the sensors and leaving the start box. Section 4 contains the functions to take me to each position. Many of these have small speed optimizations, such as skipping lines instead of going round the longer way. Finally, I have the code to take the robot back to the start box from each position. You can see the code here (it isn't the most efficient, but it works well enough):
 <details>
 <summary style="cursor: pointer">Show/Hide Code</summary>
 ```python
