--- a/src/robotics/WER2025.md
+++ b/src/robotics/WER2025.md
@@ -57,7 +57,7 @@ As well as preparing my code at the Saturday classes, I also do some at home. Th
 Shortly after we arrived at the venue, we saw the 3 new tasks:  
 
 * You had to lift a bar entirely off a stand and drop it on the floor.
-* I cant remember
+* I can't remember what this one was, but it was between the other 2 in regards to difficulty
 * You had to lift a small plastic box up and place it on a higher platform.
 
 In the opening ceremony, I had to read out the competitors oath (essentially saying that we won't cheat) in English. However, while I was waiting to go up on the stage, most other teams started writing code, testing and debugging early, so I lost about 40 minutes of preparation time compared to the other teams. I then managed to test everything, but I realised that I had built my solution to task 4 the wrong way round! My code to go to the parking space also stopped working. In the end, I managed to get 350 points in the morning, which was the highest of the entire British division. In the afternoon, I managed to do a bit more. I solved the first of the additional tasks, and got the red block to the parking space (although neither of my wheels were actually in the box). I think I got 440 points. It was then the awards and closing ceremony. I came 3rd! I was aiming for top 50, so I was shocked when they read my name out!
