updated a few pages

--- a/TODO
+++ b/TODO
@@ -1,8 +1,7 @@
 Add daylight photo to index.md
 Add CPU schematic
 Add reasons for including camjam, morse code and wildlife camera
-Restructure WER?
-Add more ?systems? section on index
 More photos in general (e.g. CPU breadboard wires)
 Add magic mirror, wildlife camera, morse code, scripted journeys, sudoku solver, camjam and picar pages
 Add 2nd WER task
+Add more CPU pages
