--- a/TODO
+++ b/TODO
@@ -2,6 +2,6 @@ Add daylight photo to index.md
 Add CPU schematic
 Add reasons for including camjam, morse code and wildlife camera
 More photos in general (e.g. CPU breadboard wires)
-Add magic mirror, wildlife camera, morse code, scripted journeys, sudoku solver, camjam and picar pages
+Add wildlife camera, morse code, scripted journeys, sudoku solver, camjam and picar pages
 Add 2nd WER task
 Add more CPU pages
